--- a/src/pug/mixins.pug
+++ b/src/pug/mixins.pug
@@ -3,4 +3,6 @@ include mixins/svg
 
 include @components/category/category
 include @components/header/header
-include @components/main/main
+include @components/services/services
+include @components/exposure/exposure
+include @components/cases/cases
