--- a/src/styles/_helpers.scss
+++ b/src/styles/_helpers.scss
@@ -66,3 +66,8 @@
     hyphens: auto;
 }
 /* stylelint-enable */
+
+.bg-image {
+    background-image: url("@images/background.png");
+    background-size: vc(1920);
+}
