--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,6 @@
 // COLORS
 $color-black: #000;
-$color-white: #fff;
+$color-white: #ffffff;
 $color-red: #ff0000;
 $color-orange: #F3C934;
 // FONTS
