--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,3 +12,6 @@
 
 @import "@components/category/category";
 @import "@components/header/header";
+@import "@components/services/services";
+@import "@components/exposure/exposure";
+@import "@components/cases/cases";
