--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -14,16 +14,13 @@ append vars
 
     each metaValue, metaKey in data.general.meta
         - meta[metaKey] = metaValue
+    - body.classList = 'bg-image'
 
 block content
     +header()
-    +main()
-        +category({
-            title: "Hello world",
-            icon: "email"
-        })
-        +picture({
-            path: `${baseDir}assets/images/header/logo`,
-            ext: `png`,
-        })
+    main
+        +services()
+        +cases()
+
     footer
+        //+exposure("telephone", "Телефон:", "+7(495) 331 33 67", "#")
