--- a/src/components/services/services.pug
+++ b/src/components/services/services.pug
@@ -13,7 +13,8 @@ mixin services()
                     li Съемки вертикальных видео
                     li Съемки для ютуб, рутуб
                     li Вирусное видео
-                    li Аэросъемка Бекстейдж
+                    li Аэросъемка
+                    li Бекстейдж
                     li Все услуги
                 .services__list_icon
                     +svg("down-arrow")
