--- a/src/components/services/services.scss
+++ b/src/components/services/services.scss
@@ -10,7 +10,7 @@
 
         h2 {
             font-style: normal;
-            font-weight: vc(700);
+            font-weight: 700;
             font-size: vc(48);
             color: $color-white;
             width: vc(266);
@@ -41,7 +41,7 @@
 
             li {
                 font-style: normal;
-                font-weight: vc(400);
+                font-weight: 400;
                 font-size: vc(16);
                 color: $color-white;
 
