--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -21,6 +21,9 @@ block content
     main
         +services()
         +cases()
+        +scholl()
+        +project()
+        +about-company()
 
     footer
         //+exposure("telephone", "Телефон:", "+7(495) 331 33 67", "#")
