--- a/src/pug/mixins.pug
+++ b/src/pug/mixins.pug
@@ -6,3 +6,11 @@ include @components/header/header
 include @components/services/services
 include @components/exposure/exposure
 include @components/cases/cases
+include @components/scholl/scholl
+include @components/scholl-icons/scholl-icons
+include @components/project/project
+include @components/projects/projects
+include @components/button1/button1
+include @components/about-company/about-company
+include @components/company-icons/company-icons
+include @components/button2/button2
