--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,3 +15,11 @@
 @import "@components/services/services";
 @import "@components/exposure/exposure";
 @import "@components/cases/cases";
+@import "@components/scholl/scholl";
+@import "@components/scholl-icons/scholl-icons";
+@import "@components/project/project";
+@import "@components/projects/projects";
+@import "@components/button1/button1";
+@import "@components/about-company/about-company";
+@import "@components/company-icons/company-icons";
+@import "@components/button2/button2";
