Подправил "Наши проекты"

--- a/src/components/about-company/about-company.pug
+++ b/src/components/about-company/about-company.pug
@@ -5,9 +5,16 @@ mixin about-company()
                 h2 О нашей компании
                 p Мы собрали в команду талантливых людей и успешно реализуем ваши проекты по всему миру. Наши агенты бывали в командировках в разных концах света и знают как правильно выбрать локацию, собрать подходящую команду и реализовать проект любой сложности. Наша уникальная компетенция - снимать контент уровня профессионального кинематографа без раздутия бюджета.
             .company__items
+                // переделать компоненты в 1 компонент
                 a(href="#").company__item
                     +company-icons(`${baseDir}assets/images/company-icons/about1`, 'Проверенные временем фанатики своего дела')
                     //+button2('Люди', '#')
+
+                // переделать компоненты в 1 компонент
                 a(href="#").company__box_icon2
                     +company-icons(`${baseDir}assets/images/company-icons/about2`, 'Погружение в проект до последней правки')
                     //+button2('Вовлеченность', '#')
+
+
+                // нейминг компонентов что на коробке то и внутри коробки
+                // поправить компонеты проекта
