--- a/src/components/button1/button1.scss
+++ b/src/components/button1/button1.scss
@@ -1,26 +1,14 @@
-.button1 {
-    width: vc(180);
-    height: vc(50);
-    background: $color-orange;
-    border-radius: vc(90);
-    text-align: center;
-    padding-top: vc(11);
-
-    &__links {
-        font-style: normal;
-        font-weight: 500;
-        font-size: vc(16);
-        line-height: vc(19);
-        color: $color-black;
-    }
-}
-
 .button {
-    background: $color-orange;
     border-radius: vc(90);
+    font-weight: 500;
+    font-size: vc(16);
+    line-height: vc(19);
     text-align: center;
+    padding: vc(16) vc(47);
+    flex-shrink: 0;
 
     &__primary {
-
+        background: $color-orange;
+        color: $color-black;
     }
 }
