--- a/src/components/projects/projects.pug
+++ b/src/components/projects/projects.pug
@@ -8,5 +8,5 @@ mixin projects(icon, name, price)
         .projects__title
             h3!= name
         .projects__info
-            +button1("Подробнее")
+            +button("Подробнее")
             p.projects__price!= price
