--- a/src/components/company-icons/company-icons.pug
+++ b/src/components/company-icons/company-icons.pug
@@ -1,9 +1,11 @@
-mixin company-icons(icon, name)
-    .icons
-        .icons__img
+mixin company-icons(icon, title, name)
+    .company-icons
+        .company-icons__img
             +picture({
                 path: icon,
                 ext: `png`,
             })(icon)
-        if name
-            p.icons__p!= name
+        .company-icons__title
+            h3!=title
+        .company-icons__name
+            p!= name
