--- a/src/components/company-icons/company-icons.scss
+++ b/src/components/company-icons/company-icons.scss
@@ -25,6 +25,7 @@
             left: 0;
             background: linear-gradient(to top, #342E30 0%, transparent 80%);
             border-radius: vc(10);
+            transition-duration: 0.35s;
         }
 
         img {
