--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -24,6 +24,7 @@ block content
         +scholl()
         +project()
         +about-company()
+        +partners()
 
     footer
         //+exposure("telephone", "Телефон:", "+7(495) 331 33 67", "#")
