--- a/src/pug/mixins.pug
+++ b/src/pug/mixins.pug
@@ -13,4 +13,5 @@ include @components/projects/projects
 include @components/button/button
 include @components/about-company/about-company
 include @components/company-icons/company-icons
-
+include @components/partners/partners
+include @components/slider/slider
