--- a/src/components/about-company/about-company.pug
+++ b/src/components/about-company/about-company.pug
@@ -1,19 +1,19 @@
 mixin about-company()
-    .company
+    .about-company
         .container
-            .company__about
+            .about-company__about
                 h2 О нашей компании
                 p Мы собрали в команду талантливых людей и успешно реализуем ваши проекты по всему миру. Наши агенты бывали в командировках в разных концах света и знают как правильно выбрать локацию, собрать подходящую команду и реализовать проект любой сложности. Наша уникальная компетенция - снимать контент уровня профессионального кинематографа без раздутия бюджета.
-            .company__items
-                a(href="#").company__item
+            .about-company__items
+                a(href="#").about-company__item
                     +company-icons(`${baseDir}assets/images/company-icons/about1`, 'Люди', 'Проверенные временем фанатики своего дела')
-                a(href="#").company__item
+                a(href="#").about-company__item
                     +company-icons(`${baseDir}assets/images/company-icons/about2`, 'Вовлеченность', 'Погружение в проект до последней правки')
-                a(href="#").company__item
+                a(href="#").about-company__item
                     +company-icons(`${baseDir}assets/images/company-icons/about3`, 'Оборудование', 'Опыт работы на различном оборудовании')
-                a(href="#").company__item
+                a(href="#").about-company__item
                     +company-icons(`${baseDir}assets/images/company-icons/about4`, 'Клиенты', 'Как крупные корпорации так и частные лица')
-                a(href="#").company__item
+                a(href="#").about-company__item
                     +company-icons(`${baseDir}assets/images/company-icons/about5`, 'Строгость', 'Соблюдаем уникальный этикет и нормы контента')
-                a(href="#").company__item
+                a(href="#").about-company__item
                     +company-icons(`${baseDir}assets/images/company-icons/about6`, 'Креатив', 'Готовы добавить в меру творческого беспредела')
