--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,4 +22,5 @@
 @import "@components/button/button";
 @import "@components/about-company/about-company";
 @import "@components/company-icons/company-icons";
-
+@import "@components/partners/partners";
+@import "@components/slider/slider";
