--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -27,4 +27,5 @@ block content
         +partners()
 
     footer
+        +footer()
         //+exposure("telephone", "Телефон:", "+7(495) 331 33 67", "#")
