--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,3 +24,4 @@
 @import "@components/company-icons/company-icons";
 @import "@components/partners/partners";
 @import "@components/slider/slider";
+@import "@components/footer/footer";
