--- a/src/pug/mixins.pug
+++ b/src/pug/mixins.pug
@@ -15,3 +15,4 @@ include @components/about-company/about-company
 include @components/company-icons/company-icons
 include @components/partners/partners
 include @components/slider/slider
+include @components/footer/footer
