Доделал вторую страницу страницу. Остался вопрос по фону и корректировки миксина "с картинкой"

--- a/src/components/company-icons/company-icons.pug
+++ b/src/components/company-icons/company-icons.pug
@@ -5,6 +5,7 @@ mixin company-icons(icon, title, name)
                 path: icon,
                 ext: `png`,
             })(icon)
+            if title
         .company-icons__title
             h3!=title
         .company-icons__name
