--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -1,5 +1,5 @@
 mixin footer()
-    .footer
+    footer.footer
         .container
             .footer__info
                 .footer__info_logo
@@ -11,10 +11,10 @@ mixin footer()
                     h3 Разделы
                     .footer__info_sections-section
                         p Идея
-                        p Аудио
                         p Видео
-                        p Текст
                         p Фото
+                        p Аудио
+                        p Текст
                         p Печатня
                 .footer__info_contacts
                     h3 Контакты
