--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -25,3 +25,5 @@
 @import "@components/partners/partners";
 @import "@components/slider/slider";
 @import "@components/footer/footer";
+@import "@components/links/links";
+@import "@components/names-category/names-category";
