--- a/src/pug/mixins.pug
+++ b/src/pug/mixins.pug
@@ -16,3 +16,5 @@ include @components/company-icons/company-icons
 include @components/partners/partners
 include @components/slider/slider
 include @components/footer/footer
+include @components/links/links
+include @components/names-category/names-category
