В процессе 3 страница страницу.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,3 +27,5 @@
 @import "@components/footer/footer";
 @import "@components/links/links";
 @import "@components/names-category/names-category";
+@import "@components/filming/filming";
+@import "@components/stages/stages";
