--- a/src/pug/mixins.pug
+++ b/src/pug/mixins.pug
@@ -18,3 +18,5 @@ include @components/slider/slider
 include @components/footer/footer
 include @components/links/links
 include @components/names-category/names-category
+include @components/filming/filming
+include @components/stages/stages
