--- a/src/components/company-icons/company-icons.pug
+++ b/src/components/company-icons/company-icons.pug
@@ -1,12 +1,12 @@
 mixin company-icons(icon, title, name)
-    .company-icons
+    a(href="#").company-icons
         .company-icons__img
             +picture({
                 path: icon,
                 ext: `png`,
             })(icon)
             if title
-        .company-icons__title
-            h3!=title
+                .company-icons__title
+                    h3!=title
         .company-icons__name
             p!= name
