--- a/src/components/names-category/names-category.pug
+++ b/src/components/names-category/names-category.pug
@@ -4,15 +4,15 @@ mixin names-category()
             .names-category__title
                 h2 Название категории
             .names-category__items
-                +company-icons(`${baseDir}assets/images/company-icons/about1`, '', 'Название услуги')
-                +company-icons(`${baseDir}assets/images/company-icons/about2`, '', 'Название услуги')
-                +company-icons(`${baseDir}assets/images/company-icons/about3`, '', 'Название услуги')
-                +company-icons(`${baseDir}assets/images/company-icons/about4`, '', 'Название услуги')
-                +company-icons(`${baseDir}assets/images/company-icons/about5`, '', 'Название услуги')
-                +company-icons(`${baseDir}assets/images/company-icons/about6`, '', 'Название услуги')
-                +company-icons(`${baseDir}assets/images/company-icons/about1`, '', 'Название услуги')
-                +company-icons(`${baseDir}assets/images/company-icons/about2`, '', 'Название услуги')
-                +company-icons(`${baseDir}assets/images/company-icons/about3`, '', 'Название услуги')
-                +company-icons(`${baseDir}assets/images/company-icons/about4`, '', 'Название услуги')
-                +company-icons(`${baseDir}assets/images/company-icons/about5`, '', 'Название услуги')
-                +company-icons(`${baseDir}assets/images/company-icons/about6`, '', 'Название услуги')
+                +company-icons(`${baseDir}assets/images/company-icons/about1`, false, 'Название услуги')
+                +company-icons(`${baseDir}assets/images/company-icons/about2`, false, 'Название услуги')
+                +company-icons(`${baseDir}assets/images/company-icons/about3`, false, 'Название услуги')
+                +company-icons(`${baseDir}assets/images/company-icons/about4`, false, 'Название услуги')
+                +company-icons(`${baseDir}assets/images/company-icons/about5`, false, 'Название услуги')
+                +company-icons(`${baseDir}assets/images/company-icons/about6`, false, 'Название услуги')
+                +company-icons(`${baseDir}assets/images/company-icons/about1`, false, 'Название услуги')
+                +company-icons(`${baseDir}assets/images/company-icons/about2`, false, 'Название услуги')
+                +company-icons(`${baseDir}assets/images/company-icons/about3`, false, 'Название услуги')
+                +company-icons(`${baseDir}assets/images/company-icons/about4`, false, 'Название услуги')
+                +company-icons(`${baseDir}assets/images/company-icons/about5`, false, 'Название услуги')
+                +company-icons(`${baseDir}assets/images/company-icons/about6`, false, 'Название услуги')
