--- a/src/pages/catalog.pug
+++ b/src/pages/catalog.pug
@@ -14,7 +14,7 @@ append vars
 
     each metaValue, metaKey in data.general.meta
         - meta[metaKey] = metaValue
-    - body.classList = 'bg-image'
+    - body.classList = 'bg-image catalog'
 
 block content
     +header()
