--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -43,6 +43,7 @@ html {
 body {
     overflow-x: hidden;
     width: 100%;
+    background-color: #271C1C;
     -webkit-font-smoothing: antialiased;
     text-decoration-skip: objects;
     text-rendering: optimizeLegibility;
