--- a/src/components/company-icons/company-icons.scss
+++ b/src/components/company-icons/company-icons.scss
@@ -1,10 +1,13 @@
-.company-icons{
+.company-icons {
+    $p: &;
+
     position: relative;
     width: vc(365);
     height: vc(261);
+    border-radius: vc(10);
+    overflow: hidden;
 
     &__img {
-
         &:after {
             content: '';
             width: 100%;
@@ -12,56 +15,41 @@
             position: absolute;
             top: 0;
             left: 0;
-            background: linear-gradient(to top, #342E30 0%, transparent 40%);
+            background: linear-gradient(180deg, rgba(49, 35, 35, 0) 0%, rgba(49, 35, 35, 0.84) 55.52%, #1B1818 100%);
             border-radius: vc(10);
-        }
-
-        &:hover::after {
-            content: '';
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            top: 0;
-            left: 0;
-            background: linear-gradient(to top, #342E30 0%, transparent 80%);
-            border-radius: vc(10);
-            transition: $transition;
+            transform: translateY(45%);
+            transition: transform $transition;
         }
 
         img {
             width: 100%;
             height: auto;
-            border-radius: vc(10);
-
         }
     }
 
     &__title {
         position: absolute;
         width: vc(236);
-        height: vc(56);
         left: vc(18);
         top: 0;
         background: #F3C934;
         border-radius: 0 0 vc(10) vc(10);
+        padding: vc(15);
         overflow: hidden;
+        z-index: 2;
 
         h3 {
             font-weight: 700;
             font-size: vc(24);
             line-height: vc(29);
             color: $color-black;
-            position: relative;
-            left: vc(15);
-            top: vc(13);
-
         }
     }
 
     &__name {
-        position: relative;
+        position: absolute;
         left: vc(25);
-        top: vc(-50);
+        bottom: vc(25);
 
         p {
             max-width: vc(210);
@@ -69,6 +57,14 @@
             font-size: vc(16);
             line-height: vc(19);
             color: $color-white;
+        }
+    }
+
+    &:hover{
+        #{$p}__img {
+            &:after {
+                transform: translateY(0);
+            }
         }
     }
 }
