--- a/src/styles/_helpers.scss
+++ b/src/styles/_helpers.scss
@@ -68,6 +68,14 @@
 /* stylelint-enable */
 
 .bg-image {
-    background-image: url("@images/background.png");
-    background-size: vc(1920);
+    &:before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background-image: url("@images/background.png");
+        background-size: vc(1920);
+    }
 }
