--- a/src/components/services/services.pug
+++ b/src/components/services/services.pug
@@ -9,14 +9,21 @@ mixin services()
                 })
             .services__list
                 ul
-                    li Съемки сторис
-                    li Съемки вертикальных видео
-                    li Съемки для ютуб, рутуб
-                    li Вирусное видео
-                    li Аэросъемка
-                    li Бекстейдж
-                    li Все услуги
-                .services__list_icon
+                    li
+                        a(href="#") Съемки сторис
+                    li
+                        a(href="#") Съемки вертикальных видео
+                    li
+                        a(href="#") Съемки для ютуб, рутуб
+                    li
+                        a(href="#") Вирусное видео
+                    li
+                        a(href="#") Аэросъемка
+                    li
+                        a(href="#") Бекстейдж
+                    li
+                        a(href="#") Все услуги
+            .services__icon
                     +svg("down-arrow")
             //.services__items
                 .services__item
