--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -37,6 +37,8 @@
 @import "@components/review/review";
 @import "@components/about-service/about-service";
 @import "@components/famyli-videos/famyli-videos";
+@import "@components/text-blok/text-blok";
 @import "@components/text-bloks/text-bloks";
 @import "@components/home-video/home-video";
 @import "@components/questions/questions";
+@import "@components/text/text";
