--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,6 +1,4 @@
 .header {
-    width: 100%;
-    height: vc(42);
     margin-top: vc(31);
 
     .container {
@@ -12,12 +10,6 @@
     &__logo {
         width: vc(349);
         height: vc(22);
-        padding: 0;
-
-        picture {
-            width: 100%;
-            height: 100%;
-        }
     }
 
     &__socials {
@@ -32,10 +24,13 @@
         svg {
             width: 100%;
             height: 100%;
+            transition: $transition;
+
+            &:hover {
+                opacity: 0.7;
+            }
         }
-        &:hover {
-            opacity: 0.7;
-        }
+
     }
 
     &__contacts {
