--- a/src/components/home-video/home-video.scss
+++ b/src/components/home-video/home-video.scss
@@ -4,6 +4,7 @@
         display: flex;
         justify-content: space-between;
         margin-top: vc(48);
+        margin-bottom: vc(60);
     }
 
     &__img {
@@ -30,6 +31,7 @@
                 background: #312323;
                 border: 3px solid #1D0B0B;
                 border-radius: 20px;
+                object-fit: cover;
             }
         }
     }
