--- a/src/components/names-category/names-category.scss
+++ b/src/components/names-category/names-category.scss
@@ -18,7 +18,7 @@
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: 1fr 1fr 1fr 1fr;
-        gap: 21px 25px;
+        gap: vc(25) vc(37);
         grid-template-areas:
         ". . ."
         ". . ."
