--- a/src/components/projects/projects.pug
+++ b/src/components/projects/projects.pug
@@ -9,5 +9,5 @@ mixin projects(icon, name, price)
             .projects__title
                 h3!= name
             .projects__info
-                +button("Подробнее")
+                +button("Подробнее", "#")
                 p.projects__price!= price
