--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -1,8 +1,9 @@
 .projects {
-    display: flex;
-    flex-direction: column;
 
-    .container {}
+    .container {
+        display: flex;
+        flex-direction: column;
+    }
 
     &__img {
         width: vc(365);
