--- a/src/components/review/review.scss
+++ b/src/components/review/review.scss
@@ -1,10 +1,7 @@
 .review {
-
-    .container {}
-
     &__infos {
         width: vc(375);
-        height: vc(282);
+        height: vc(245);
         background: #1E1516;
         box-shadow: 0 0 vc(14) rgba(0, 0, 0, 0.15);
         border-radius: vc(10);
@@ -17,6 +14,20 @@
             img {
                 width: vc(55);
                 height: vc(38);
+            }
+        }
+
+        &_svg2 {
+            position: absolute;
+            top: vc(83);
+            z-index: -1;
+
+            svg {
+                fill: #1E1516;
+
+                @include devices{
+                    fill: red;
+                }
             }
         }
 
@@ -39,7 +50,6 @@
                 text-align: center;
                 color: $color-white;
                 padding-top: vc(19);
-                padding-bottom: vc(24);
 
                 &::before {
                     content: '';
@@ -65,12 +75,12 @@
 
         &_img2 {
             position: absolute;
-            top: vc(240);
-            left: vc(150);
+            top: vc(202);
+            left: vc(163);
 
             img {
-                width: vc(80);
-                height: vc(80);
+                width: vc(60);
+                height: vc(60);
             }
         }
     }
