--- a/src/components/text-bloks/text-bloks.scss
+++ b/src/components/text-bloks/text-bloks.scss
@@ -65,10 +65,14 @@
                 border-radius: vc(20);
                 max-width: 100%;
                 max-height: 100%;
+                object-fit: cover;
             }
         }
 
         &_title {
+            display: flex;
+            flex-direction: column;
+            gap: vc(37);
 
             p {
                 font-weight: 400;
