--- a/src/pug/mixins.pug
+++ b/src/pug/mixins.pug
@@ -29,4 +29,4 @@ include @components/text-blok/text-blok
 include @components/text-bloks/text-bloks
 include @components/home-video/home-video
 include @components/questions/questions
-
+include @components/text/text
